<resources>

    <string name="app_name">HotelBooking</string>
    <string name="text_price">от %1$s ₽</string>
    <string name="text_price_short">%1$s ₽</string>
    <string name="btn_nav_to_suits">К выбору номера</string>
    <string name="included_minimal">Самое необходимое</string>
    <string name="hotel_facilities">Удобства</string>
    <string name="hotel_included">Что включено</string>
    <string name="hotel_not_included">Что не включено</string>
    <string name="hotel_about_title">Об отеле</string>
    <string name="hotel_title_main">Отель</string>
    <string name="btn_select_suit">Выбрать номер</string>
    <string name="suit_details">Подробнее о номере</string>



<!--    Booking-->

    <string name="booking_main_title">Бронирование</string>

    <string name="nights_count">%1$s ночей</string>

    <string name="tourist_first_name_hint">Имя</string>
    <string name="tourist_last_name_hint">Фамилия</string>
    <string name="tourist_date_of_birth_hint">Дата рождения</string>
    <string name="tourist_citizenship_hint">Гражданство</string>
    <string name="tourist_passport_hint">Номер загранпаспорта</string>
    <string name="tourist_passport_expire_hint">Срок действия загранпаспорта</string>
    <string name="booking_data_departure_city_hint">Вылет из</string>
    <string name="booking_data_arrival_at_hint">Страна, город</string>
    <string name="booking_data_dates_hint">Дата</string>
    <string name="booking_data_nights_hint">Кол-во ночей</string>
    <string name="booking_data_hotel_name_hint">Отель</string>
    <string name="booking_data_hotel_suit_hint">Номер</string>
    <string name="booking_data_nourishment_hint">Питание</string>
    <string name="booking_client_info_title">Информация о покупателе</string>


    <string name="booking_client_telephone_number_hint">Номер телефона</string>
    <string name="booking_client_email_hint">Почта</string>
    <string name="booking_client_info_main_hint">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
    <string name="booking_add_tourist">Добавить туриста</string>


    <string name="booking_payment_tour_hint">Тур</string>
    <string name="booking_payment_fuel_tax_hint">Топливный сбор</string>
    <string name="booking_payment_service_tax_hint">Сервисный сбор</string>
    <string name="booking_payment_sum_hint">К оплате</string>

    <string name="btn_make_payment">Оплатить %1$s ₽</string>

    <string name="tourist_item_label">%1$s турист</string>


<!--    Order Success-->
    <string name="order_main_title">Заказ оплачен</string>
    <string name="btn_super">Супер!</string>
    <string name="order_main_hint">Подтверждение заказа №%1$s может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
    <string name="order_notification">Ваш заказ принят в работу</string>

</resources>