<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_cornered"
    android:padding="@dimen/base_margin"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_secondary"
            android:textColor="@color/secondary_color"
            android:text="@string/booking_data_departure_city_hint"
            />

        <TextView
            android:id="@+id/tvDepartureFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_secondary"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        >

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_secondary"
            android:textColor="@color/secondary_color"
            android:text="@string/booking_data_arrival_at_hint"
            />

        <TextView
            android:id="@+id/tvArrivalAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_secondary"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        >

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_secondary"
            android:textColor="@color/secondary_color"
            android:text="@string/booking_data_dates_hint"
            />

        <TextView
            android:id="@+id/tvDates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_secondary"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        >

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_secondary"
            android:textColor="@color/secondary_color"
            android:text="@string/booking_data_nights_hint"
            />

        <TextView
            android:id="@+id/tvNights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_secondary"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        >

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_secondary"
            android:textColor="@color/secondary_color"
            android:text="@string/booking_data_hotel_name_hint"
            />

        <TextView
            android:id="@+id/tvHotel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_secondary"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        >

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_secondary"
            android:textColor="@color/secondary_color"
            android:text="@string/booking_data_hotel_suit_hint"
            />

        <TextView
            android:id="@+id/tvSuit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_secondary"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        >

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_secondary"
            android:textColor="@color/secondary_color"
            android:text="@string/booking_data_nourishment_hint"
            />

        <TextView
            android:id="@+id/tvNourishment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_secondary"
            />
    </LinearLayout>

</LinearLayout>