<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/base_margin"
    android:background="@drawable/bg_white_cornered"
    >

    <TextView
        android:id="@+id/tvMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/booking_client_info_title"
        android:textSize="@dimen/text_size_title"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiTelephoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:hint="@string/booking_client_telephone_number_hint"
        >

        <EditText
            android:id="@+id/etTelephoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:digits="1234567890+-() "
            android:inputType="numberSigned"
            android:maxLength="18"
            android:autofillHints="phone"
            android:backgroundTint="@color/field_normal"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_margin"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:hint="@string/booking_client_email_hint">
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_edit_text"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/field_normal"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/secondary_color"
        android:textSize="@dimen/text_size_hint"
        android:layout_marginTop="@dimen/half_margin"
        android:text="@string/booking_client_info_main_hint"/>


</LinearLayout>