<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_cornered"
    android:padding="@dimen/base_margin"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_secondary"
            android:layout_weight="1"
            android:textColor="@color/secondary_color"
            android:text="@string/booking_payment_tour_hint"
            />

        <TextView
            android:id="@+id/tvPaymentTour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_secondary"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_secondary"
            android:textColor="@color/secondary_color"
            android:text="@string/booking_payment_fuel_tax_hint"
            />

        <TextView
            android:id="@+id/tvPaymentFuelTax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_secondary"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_secondary"
            android:textColor="@color/secondary_color"
            android:text="@string/booking_payment_service_tax_hint"
            />

        <TextView
            android:id="@+id/tvPaymentServiceTax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_secondary"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_secondary"
            android:textColor="@color/secondary_color"
            android:text="@string/booking_payment_sum_hint"
            />

        <TextView
            android:id="@+id/tvPaymentSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_secondary"
            android:textColor="@color/interactive_text"
            />
    </LinearLayout>



</LinearLayout>